# witness-bench

./: .gitignore  RAW_REPORT.md  README.md
baseline/ethrex/fixtures/networks/: default.yaml
baseline/ethrexx/: Dockerfile
baseline/go-ethereum/eth/: api_debug.go
baseline/lighthouse/beacon_node/genesis/: Cargo.toml
baseline/reth/: Cargo.toml
baseline/reth/crates/ew_exex/: Cargo.toml
baseline/reth/crates/ew_exex/src/: error.rs  exex.rs  lib.rs  pruner.rs  rpc.rs
baseline/reth/crates/ew_exex/src/db/: codec.rs  db_reth.rs  mod.rs  tables.rs
bench-reports/: ETHREX.md  FULL_REPORT.md  GETH.md
geth/baseline/lighthouse/.github/: CODEOWNERS
k-testnet/: kurtosis.yml  network_params.yaml
lighthouse/beacon_node/beacon_chain/tests/: store_tests.rs
lighthouse/beacon_node/store/src/: hot_cold_store.rs
lighthouse/lighthouse/: Cargo.toml
lighthouse/scripts/local_testnet/: network_params.yaml  start_local_testnet.sh
lighthouse/slasher/src/database/: lmdb_impl.rs
new-payload-with-witness/ethrex/cmd/ethrex/: cli.rs
new-payload-with-witness/ethrexs/cmd/ethrex/: initializers.rs
new-payload-with-witness/ethrexs/crates/blockchain/: blockchain.rs
new-payload-with-witness/go-ethereum/core/: blockchain.go
new-payload-with-witness/go-ethereum/eth/catalyst/: api.go
new-payload-with-witness/lighthouse/beacon_node/: Cargo.toml
new-payload-with-witness/lighthouse/beacon_node/execution_layer/: Cargo.toml
new-payload-with-witness/lighthouse/scripts/local_testnet/: network_params.yaml  start_local_testnet.sh
new-payload-with-witness/lighthouse/validator_manager/src/: lib.rs
raw-logs/: ETHREX.md  ETHREX_IPC.md  RETH_EXEX.md
scripts/: network_params_ethrex.yaml  network_params_reth.yaml  run_base_line_ethrex.sh  run_base_line_geth.sh  run_base_line_reth.sh  run_with_new_payload_ethrex.sh  run_with_new_payload_geth.sh  stop_local_testnet_ethrex.sh
scripts/raw-reth-local-testnet/: README.md  run.sh  setup.sh  start_beacon.sh  start_reth.sh  start_validator.sh  vars.env
scripts/raw-reth-local-testnet/genesis_generator/: Cargo.toml
scripts/raw-reth-local-testnet/genesis_generator/src/: main.rs
scripts/raw-reth-local-testnet/network_config/: config.yaml  genesis.json  genesis.ssz  jwt.hex
spammer/: BatchToucher.json  SpammerArtifact.ts  check_fee.ts  check_pool.ts  constants.ts  index.ts  package.json  pnpm-lock.yaml  pool_stats.ts  setup.ts  simple_tx.ts  tsconfig.json  tunner.ts  witness.json
spammer/case_one/: block0_100mb.ts  block0_300mb.ts  block0_500mb.ts  block32_300mb.ts  block64_300mb.ts  block8_300mb.ts  index.ts
spammer/case_two/: 100mb.ts  300mb.ts  500mb.ts
spammer/runners/: 100mb.ts  300mb.ts  500mb.ts  index.ts
(+52 files in other folders)
